--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -1,12 +1,13 @@
 name: Go
 
 on:
+  pull_request:
+      branches:
+        - master
   push:
     tags:
       - v*
     branches:
-      - master
-  pull_request:
       - master
 
 jobs:
